# phantasma

./: Cargo.toml  README.md
.github/workflows/: release.yml
docs/: cfg.toml  configuration.md  masterservers.vdf  usage.md
src/: cli.rs  client.rs  config.rs  filter.rs  logger.rs  main.rs  master_server.rs  parser.rs  server.rs  server_info.rs
