[package]
name = "phantasma"
version = "0.1.2"
description = "Reimplementation of Valve's masterserver"
authors = ["siohaza <siohaza@proton.me>"]
repository = "https://github.com/siohaza/phantasma"
readme = "README.md"
keywords = ["info", "udp-server", "source-engine", "masterserver", "server"]
categories = ["command-line-utilities", "network-programming"]
license = "GPL-3.0"
edition = "2024"

[features]
default = ["logtime"]
logtime = ["chrono"]

[dependencies]
thiserror = "2"
lexopt = "0.3.1"
log = "0.4"
bitflags = "2.9"
fastrand = "2.3"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dependencies.chrono]
version = "0.4"
optional = true
default-features = false
features = ["clock"]
